<resources>
    <string name="add_player">Add Player</string>
    <string name="app_name">UltiManager</string>
    <string name="create_game">Create Game</string>
    <string name="create_player">Create Player</string>
    <string name="cutter">Cutter</string>
    <string name="defense">Defense</string>
    <string name="games">Games</string>
    <string name="list_games">List Games</string>
    <string name="list_players">List Players</string>
    <string name="handler">Handler</string>
    <string name="name">Name</string>
    <string name="new_game">New Game</string>
    <string name="number">Number</string>
    <string name="opposing_team">Opposing Team</string>
    <string name="other">Other</string>
    <string name="player_with_number">%1$s (#%2$d)</string>
    <string name="select_line">Select Line</string>
    <string name="use_line">Use Line</string>
    <string name="view_stats">View Stats</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_message">UltiManager allows you to record statistics for a new game, or view the results of previous games. These games are played to 11 points.</string>
    <string name="throwaway">Throwaway</string>
    <string name="they_scored">They Scored</string>
</resources>
