<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.ultimanager.activities.PlayerAddActivity">

    <TextView
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/add_player"
        android:textSize="24sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <android.support.design.widget.TextInputEditText
            android:hint="@string/name"
            android:id="@+id/input_player_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <android.support.design.widget.TextInputEditText
            android:hint="Number"
            android:id="@+id/input_player_number"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radio_role_handler"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/handler" />
        <RadioButton
            android:id="@+id/radio_role_cutter"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/cutter" />
        <RadioButton
            android:checked="true"
            android:id="@+id/radio_role_other"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/other" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_create_player"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="onClick"
        android:text="@string/create_player"/>

</LinearLayout>
