<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="16dp"
    tools:context="com.ultimanager.WelcomeActivity">

    <LinearLayout
        android:gravity="center"
        android:id="@+id/welcome_text_container"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/welcome_buttons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/welcome"
            android:textSize="40sp"/>

        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:textSize="24sp" />
        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_teamname_text"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/welcome_buttons"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text_container">

        <Button
            android:id="@+id/btn_new_game"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:onClick="onClick"
            android:text="@string/new_game" />

        <Button
            android:id="@+id/btn_list_players"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:onClick="onClick"
            android:text="@string/list_players" />

        <Button
            android:id="@+id/btn_list_games"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:onClick="onClick"
            android:text="@string/list_games" />

        <Button
            android:id="@+id/btn_view_stats"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:onClick="onClick"
            android:text="@string/view_stats" />
        <Button
            android:id="@+id/btn_teamname"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:onClick="onClick"
            android:text="Edit Teamname" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
