<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.ultimanager.activities.GameAddActivity">

    <TextView
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/new_game"
        android:textColor="@color/colorTextDark"
        android:textSize="24sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <android.support.design.widget.TextInputEditText
            android:hint="@string/opposing_team"
            android:id="@+id/input_opposing_team"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Starting Position:"
        android:textColor="@color/colorTextDark"
        android:textStyle="bold"/>

    <RadioGroup
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radio_offense"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Offense" />
        <RadioButton
            android:id="@+id/radio_defense"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Defense" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_add_game"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="onClick"
        android:text="@string/create_game" />

</LinearLayout>
