<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="8dp"
    tools:context="com.ultimanager.activities.DPointActivity">

    <LinearLayout
        android:id="@+id/defense_header"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/defense"
            android:textColor="@color/colorTextDark"
            android:textSize="24sp"/>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:id="@+id/defense_player_buttons"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/defense_footer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/defense_header" />

    <LinearLayout
        android:id="@+id/defense_footer"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/btn_throwaway"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/throwaway" />

        <Button
            android:id="@+id/btn_opponent_scored"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/they_scored" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
